# Programacao

./: leia.md  main.cpp  program
00.comandos/: _comandos.txt
01.tiposNativos/: tipos_nativos.out
01.variaveis.tiposNativos/: variavel.declaracao.tiposNativos.cpp
02.constantes/: constantes.cpp
08_tipos_nativos/: tipos_nativos.cpp
Backups/: .gitignore  leia.txt
Basic_PGM/: Arrumar.md
Deno/: BASE.md
Github_Base/: branch.md  links.txt  tags.md
PgmGo/: .env  go.mod  main.go
Python/22_10_/: pyproject.toml
Python/22_10_/fundamentos_py/: 01_strings.py
Python/22_10_/fundamentos_py/pydantic/: validando_args.py
Python/22_10_/tests/: test_01_sem_frames.py  test_02_unitTest_default_Py.py  test_pytest_01.py
Regex/: 01.regex.txt
_Novas_Anotacoes/: Novas_Anotacoes.txt
_notas/: _topicos.txt
_notas_cpp/: 02.compilacao_traducao.txt  02.legado.abandone.txt  02.usos.txt  04.sintaxe_regras.txt  05.escopos.namespaces.txt  06.codigos_internos_sistema.txt  06.funcao.Comando.deSistema.txt  06.objeto.Comando.deSistema.txt  07.dado.txt  08.tipos.Dados.NativosLinguagem.txt  09.auxiliares.txt  _Topicos_.txt  editor_configs.txt
bash/: bash.entensoes.txt  comandos.bash.json  comandos.bash.md  funcoes_bash.md  links.bash.md
ccp/: leia.txt  leia_ccp.txt
cpp/: main.cpp  program.out
formatador_texto_fmt/: formatador_texto_fmt.go
outros/: costumo_errar_2.txt  editor_configs.txt  linux_remover_pgm.txt  tester.txt
padrao_prototipado/: produto.cpp  produto.h
typescript/: BASE.md  array.desestruturacao.ts  array.ts  objetos.Optional_chaining.verificandoPropsEmObj.ts  (+4 more)
(+905 files in other folders)
