[tool.poetry]
name = "22-10-"
version = "0.1.0"
description = ""
authors = ["rzjprogramador <rzjprogramador@gmail.com>"]
readme = "README.md"
packages = [{include = "22_10_"}]

[tool.poetry.dependencies]
python = "^3.10.5"
flask = "^2.2.2"
pytest = "^7.2.0"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
